# fb_messenger_hld

./: .flake8  .gitignore  Dockerfile  README.md  messenger.db  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/routes/: __init__.py  auth_routes.py  conversation_routes.py  message_routes.py  user_routes.py
app/controllers/: auth_controller.py  conversation_controller.py  message_controller.py  user_controller.py
app/core/: __init__.py  dependencies.py  security.py
app/db/: cassandra_client.py  sqlite_client.py
app/models/: cassandra_models.py  sqlite_models.py
app/schemas/: conversation.py  message.py  user.py
docs/: CI_CD_Pipeline_Report.md
k8s/: deployment.yaml  service.yaml
scripts/: generate_test_data.py  setup_db.py
tests/: conftest.py  test_auth.py  test_conversations.py  test_messages.py  test_users.py
