[project]
name = "fb-messenger-backend"
version = "1.0.0"
description = "Facebook Messenger Backend API with FastAPI"
requires-python = ">=3.11"

[tool.black]
# Black code formatter configuration
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
    | \.mypy_cache
)/
'''

[tool.ruff]
# Ruff linter configuration - fast Python linter
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = [
    "E501",  # Line too long - handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert in tests

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
# Coverage configuration
source = ["app"]
omit = ["tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
